--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ any new students or hosting any visitors at CMU.
   will be taught in fall 2018
   by <a href="http://www.cs.cmu.edu/~bapoczos/">Barnabas Poczos<a>.
 
+</ul>
+
 <!-- 
 
 <h3 class="sec"><a name="proj">Projects</a></h3 class="sec">
@@ -205,6 +207,11 @@ in online journal articles to find information about the subcellular localizatio
 an open-source Java package of information extraction software. (Note: we've
 migrated the code now from SourceForge to GitHub.)
 -->
+
+<h3 class="sec"><a name="announce"></a>Teaching</h3 class="teach">
+
+For now <a href="http://www.cs.cmu.edu/~wcohen/">my old course
+  notes and lectures</a> are avilable through CMU.
 
 <h3 class="sec"><a name="sw">Software and demos</a></h3 class="sec">
 
