bug fix, rm ripper

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ an open-source Java package of information extraction software. (Note: we've
 migrated the code now from SourceForge to GitHub.)
 -->
 
-<h3 class="sec"><a name="announce"></a>Teaching</h3 class="teach">
+<h3 class="sec"><a name="teach"></a>Teaching</h3 class="teach">
 
 For now <a href="http://www.cs.cmu.edu/~wcohen/">my old course
   notes and lectures</a> are avilable through CMU.
@@ -325,16 +325,6 @@ rule-learning system Yoram Singer and I developed.  This code is
 provided with absolutely no warranty, promise of support, or really,
 any expectation that it will keep working.  You are totally on your
 own with this one, friend.  
-
-<li>WHIRL is another old system I wrote.  Currently, I am not
-distributing it, but ask me if you're interested in reviving the
-source code.
-
-<li>To get a copy of RIPPER, please send mail to my evil twin brother,
-wcohen -AT- gmail.com.  As an alternative to that ancient code: I haven't used it myself, but
-I've heard good things about
-J-RIP, a Ripper clone written for WEKA.
-</ul>
 
 <h3 class="sec"><a name="data">Datasets</a></h3 class="sec">
 
