--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ He holds seven
 patents related to learning, discovery, information retrieval, and
 data integration, and is the author of more than 200 publications.
 
+<p>Dr. Cohen is currently on leave from his position as a Professor in
+the Department of Machine Learning, with a joint appointment in the
+Language Technology Institute.
 <!-- <h3 class="sec"><a name="cv">Curriculum vita</cv></h3 class="sec">
 
 <ul>
@@ -127,16 +130,9 @@ data integration, and is the author of more than 200 publications.
 <ul>
 
 <li><b>I have moved to Google.</b> After the spring 2018 semester ends,
-I will move from CMU to Google.  I will be leading a new research
-group in AI/ML that will be located in Pittsburgh in Google's Bakery
-Square location.  And case you're wondering - yes, we will be hiring!
-
-<p><a href="http://www.cs.cmu.edu/~mgormley/">Matt Gormley</a> is the
-new Director of the Undergraduate Minor in ML.  The new co-Directors
-of the MS in ML Program will
-be <a href="http://www.cs.cmu.edu/~ninamf/">Nina Balcan</a>
-and <a href="http://www.cs.cmu.edu/~rsalakhu/">Ruslan
-Salakhutdinov</a>
+I moved from CMU to Google.  I am leading a new research
+group in AI/ML that is located in Pittsburgh in Google's Bakery
+Square location.  And case you're wondering - <a href="https://careers.google.com/jobs#!t=jo&jid=/google/research-scientist-machine-learning-and-6425-penn-ave-pittsburgh-pa-15206-usa-4037100016&">yes, we are hiring!</a>
 
 <p>
 
@@ -151,21 +147,6 @@ Ferrara, Italy.
 the <a href="http://reasoning.eas.asu.edu/kr2018/">16th International
 Conference on Principles of Knowledge Representation and Reasoning</a>
 to be held in Tempe, Arizona (USA) on October 30-November 2, 2018.
-
-<p>
-
-<li><b>Can I visit CMU and work with you?, or can I apply to CMU and
-work with you as a grad student?</b>  I will continue to advise my
-current students as needed through 2019, but I will not be taking
-any new students or hosting any visitors at CMU.
-
-<p>
-
-
-<li><b>Can I take 10-605 or 10-805 this fall?</b> Yes: 10-605/10-805
-  will be taught in fall 2018
-  by <a href="http://www.cs.cmu.edu/~bapoczos/">Barnabas Poczos<a>.
-
 </ul>
 
 <!-- 
