--- a/index.html
+++ b/index.html
@@ -136,13 +136,6 @@ Square location.  And case you're wondering - <a href="https://careers.google.co
 
 <p>
 
-<li><b>I'll be an invited speaker at ILP-2018</b> - that's
-the <a href="http://ilp2018.unife.it/">28th International Conference
-on Inductive Logic Programming</a> on September 2nd - 4th 2018, in
-Ferrara, Italy.
-
-<p>
-
 <li><b>I'll be an invited speaker at KR-2018</b> - that's
 the <a href="http://reasoning.eas.asu.edu/kr2018/">16th International
 Conference on Principles of Knowledge Representation and Reasoning</a>
@@ -407,9 +400,17 @@ more WHIRL-format entity name matching problems.
 <p>
 <ul>
 
-<li><a href="declarative-learning-workshop-2018.pptx">An invited talk
+<li><a href="ilp-2018.pptx">An invited talk </a>
+given at the <a href="http://ilp2018.unife.it/">28th International Conference
+on Inductive Logic Programming</a> on September 2nd - 4th 2018, in
+Ferrara, Italy.
+
+<p>
+
+
+<li><a href="declarative-learning-workshop-2018.pptx">An invited talk</a>
 given at Third International Workshop on Declarative Learning Based
-Programming</a> (DeLBP), at AAAI-2018.
+Programming (DeLBP), at AAAI-2018.
 
 <li><a href="snl-2017.pptx">An invited talk given at SNL-2017</a> (the 1st International Workshop on Symbolic-Neural Learning) in July 2017.
 
