new pubs and talks

--- a/index.html
+++ b/index.html
@@ -400,13 +400,17 @@ more WHIRL-format entity name matching problems.
 <p>
 <ul>
 
-<li><a href="ilp-2018.pptx">An invited talk </a>
-given at the <a href="http://ilp2018.unife.it/">28th International Conference
+<li><a href="kr-2018.pptx">An invited talk </a> given at
+the <a href="http://ilp2018.unife.it/">The 16th International
+Conference on Principles of Knowledge Representation</a> on Oct 27th -
+Nov 2nd 2018, in Tempe, Arizona.
+
+<li><a href="ilp-2018.pptx">An invited talk </a> given at
+the <a href="http://ilp2018.unife.it/">28th International Conference
 on Inductive Logic Programming</a> on September 2nd - 4th 2018, in
-Ferrara, Italy.
-
-<p>
-
+Ferrara, Italy (there's
+also <a href="https://drive.google.com/file/d/1yU1EyIVwBgnW-1RS7uL0GzUjnciVQf6O/view">video
+for this talk</a>).
 
 <li><a href="declarative-learning-workshop-2018.pptx">An invited talk</a>
 given at Third International Workshop on Declarative Learning Based
