--- a/pubs-a.html
+++ b/pubs-a.html
@@ -3,7 +3,7 @@
 </head>
 <body><h3>William W. Cohen's Papers: Applications</h3>
 <ol>
-<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL</a>.
+<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
 </li>
 <li>T. Mitchell, W. Cohen, E. Hruschka, P. Talukdar, B. Yang, J. Betteridge, A. Carlson, B. Dalvi, M. Gardner, B. Kisiel, J. Krishnamurthy, N. La, K. Mazaitis, T. Mohamed, N. Nakashole, E. Platanios, A. Ritter, M. Samadi, B. Settles, R. Wang, D. Wijaya, A. Gupta, X. Chen, A. Saparov,M. Greaves, J. Welling (2017): <a href="postscript/cacm-2017.pdf">Never-Ending Learning   </a> in <a href="recent.html">CACM</a>.
 </li>
