--- a/pubs-t.html
+++ b/pubs-t.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Text Categorization</h3>
 <ol>
+<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, and Xinghua Lu (2018): <a href="postscript/bioasq-2018.pdf">AttentionMeSH: Simple, Effective and Interpretable Automatic MeSH Indexer</a> in <a href="recent.html">BioASQ-2018</a>.
+</li>
 <li>Zhilin Yang, Bhuwan Dhingra, Ye Yuan, Junjie Hu, William W. Cohen, Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1611.01724">Words or Characters? Fine-grained Gating for Reading Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangDYHCS16">ICLR 2017</a>.
 </li>
 <li>Zhilin Yang, Ruslan Salakhutdinov, William W. Cohen  (2017): <a href="http://arxiv.org/abs/1703.06345">Transfer Learning for Sequence Tagging with Hierarchical Recurrent Networks</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangSC17">ICLR 2017</a>.
