--- a/pubs-g.html
+++ b/pubs-g.html
@@ -3,11 +3,11 @@
 </head>
 <body><h3>William W. Cohen's Papers: Learning in Graphs</h3>
 <ol>
-<li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">arxiv.org/abs/1809.00782</a>.
+<li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
-<li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in <a href="recent.html">arxiv.org/abs/1806.05662</a>.
+<li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in <a href="recent.html">NIPS-2018</a>.
 </li>
-<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL</a>.
+<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
 </li>
 <li>Fan Yang, Zhilin Yang, William W. Cohen (2017): <a href="postscript/nips-2017-diffrule.pdf">Differentiable Learning of Logical Rules for Knowledge Base Reasoning</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYC17">NIPS-2017</a>.
 </li>
