--- a/pubs.html
+++ b/pubs.html
@@ -4,11 +4,13 @@
 <body><h3>Papers by William W. Cohen</h3>
 <h3>2018</h3>
 <ol>
-<li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">arxiv.org/abs/1809.00782</a>.
+<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, and Xinghua Lu (2018): <a href="postscript/bioasq-2018.pdf">AttentionMeSH: Simple, Effective and Interpretable Automatic MeSH Indexer</a> in <a href="recent.html">BioASQ-2018</a>.
 </li>
-<li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in <a href="recent.html">arxiv.org/abs/1806.05662</a>.
+<li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
-<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL</a>.
+<li>Zhilin Yang, Jake (Junbo) Zhao, Bhuwan Dhingra, Kaiming He, William W. Cohen, Ruslan Salakhutdinov, Yann LeCun (2018): <a href="http://arxiv.org/abs/1806.05662">GLoMo: Unsupervisedly Learned Relational Graphs as Transferable Representations</a> in <a href="recent.html">NIPS-2018</a>.
+</li>
+<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
 </li>
 </ol>
 <h3>2017</h3>
