--- a/pubs-i.html
+++ b/pubs-i.html
@@ -3,6 +3,10 @@
 </head>
 <body><h3>William W. Cohen's Papers: Inductive Logic Programming</h3>
 <ol>
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>Fan Yang, Jiazhong Nie, William W. Cohen, Ni Lao (2017): <a href="http://arxiv.org/abs/1711.06744">Learning to Organize Knowledge with N-Gram Machines</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-06744">arxiv.org/abs/1711.06744</a>.
 </li>
 <li>Fan Yang, Zhilin Yang, William W. Cohen (2017): <a href="postscript/nips-2017-diffrule.pdf">Differentiable Learning of Logical Rules for Knowledge Base Reasoning</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYC17">NIPS-2017</a>.
