--- a/pubs-s.html
+++ b/pubs-s.html
@@ -2,6 +2,19 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
+<h3>Recent papers: 2019</h3>
+<ol>
+<li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
+</li>
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in <a href="recent.html">preparation</a>.
+</li>
+</ol>
 <h3>Recent papers: 2018</h3>
 <ol>
 <li>Haitian Sun, William W. Cohen, Lidong Bing (2018): <a href="http://arxiv.org/abs/1804.09238">Semi-Supervised Learning with Declaratively Specified Entropy Constraints</a> in <a href="recent.html">NIPS-2018</a>.
@@ -52,35 +65,6 @@
 <li>Zhilin Yang, Ruslan Salakhutdinov, William W. Cohen  (2017): <a href="http://arxiv.org/abs/1703.06345">Transfer Learning for Sequence Tagging with Hierarchical Recurrent Networks</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangSC17">ICLR 2017</a>.
 </li>
 <li>Lidong Bing, Bhuwan Dhingra, Kathryn Mazaitis, Jong Hyuk Park, William W. Cohen (2017): <a href="http://arxiv.org/abs/1606.03398">Bootstrapping Distantly Supervised IE using Joint Learning and Small Well-structured Corpora</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/aaai/BingDMPC17">AAAI 2017</a>.
-</li>
-</ol>
-<h3>Recent papers: 2016</h3>
-<ol>
-<li>William W. Cohen (2016): <a href="http://arxiv.org/abs/1605.06523">TensorLog: A Differentiable Deductive Database</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/Cohen16b">arxiv.org 1605.06523</a>.
-</li>
-<li>Abhinav Maurya, Kenton Murray, Yandong Liu, Chris Dyer, William W. Cohen and Daniel B. Neill (2016): <a href="http://arxiv.org/abs/1602.04393">Semantic Scan: Detecting Subtle, Spatially Localized Events in Text Streams</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/MauryaMLDCN16">arxiv 1602.04393</a> <b>(won Yelp Dataset Challenge Grand Prize )</b>.
-</li>
-<li>Douglas R. Pierce, David P. Redlawsk, and William W. Cohen (2016): <a href="http://em.rdcu.be/wf/click?upn=KP7O1RED-2BlD0F9LDqGVeSGkOkKPKLsLE67VQlcXrznM-3D_443SnMoetQVzTlRw2Szaz0NKknJYwbdlHMxFMuGJYi1jbemnhvWISdgE0sI608J7-2F9X5K6SrMGQ5YBhTIfZrUcghyTae3gytqZB9IKnvLz62-2BtGK-2BEp3S3XmNfeqAOnwrgpMFHiji-2BOBwZvpEY5PjIcCLMLJ1Geo8DaYsb5cnSCCh9qNxkO2jXj5yIRypWVrzStRPnw3NFl6BJOBiHsoZ5I0-2BatSbL559SplH3znXmY-3D">Social Influences on Online Political Information Search and Evaluation</a> in <a href="recent.html">Political Behavior DOI 10.1007/s11109-016-9374-4</a>.
-</li>
-<li>Zhilin Yang, Ye Yuan, Yuexin Wu, Ruslan Salakhutdinov, William W. Cohen (2016): <a href="postscript/nips-2016.pdf">Encode, Review, and Decode: Reviewer Module for Caption Generation</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYWSC16">NIPS-2016</a>.
-</li>
-<li>Rose Catherine and William W. Cohen (2016): <a href="postscript/recsys-2016.pdf">Personalized Recommendations using Knowledge Graphs: A Probabilistic Logic Programming Approach</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/recsys/CatherineC16">RecSys 2016</a>.
-</li>
-<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2016): <a href="postscript/wakbc-2016.pdf">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/akbc/BingCDW16">WAKBC-2016</a>.
-</li>
-<li>Bhuwan Dhingra, Zhong Zhou, Dylan Fitzpatrick, Michael Muehl and William W. Cohen (2016): <a href="postscript/acl-2016-bd.pdf">Tweet2Vec: Character-Based Distributed Representations for Social Media</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraZFMC16">ACL-2016 (short paper)</a>.
-</li>
-<li>William Yang Wang and William W. Cohen (2016): <a href="postscript/ijcai-2016-yww.pdf">Learning First-Order Logic Embeddings via Matrix Factorization</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/WangC16">IJCAI-2016</a>.
-</li>
-<li>Zhilin Yang, Jei Tang, and William W. Cohen (2016): <a href="postscript/ijcai-2016-zy.pdf">Multi-Modal Bayesian Embeddings for Learning Social Knowledge Graphs</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/YangTC16">IJCAI-2016</a>.
-</li>
-<li>Zhilin Yang, Ruslan Salakhutdinov, William Cohen (2016): <a href="http://arxiv.org/abs/1603.08861">Revisiting Semi-Supervised Learning with Graph Embeddings</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangCS16">ICML-2016</a>.
-</li>
-<li>Zhilin Yang, Ruslan Salakhutdinov, William Cohen (2016): <a href="http://arxiv.org/abs/1603.06270">Multi-Task Cross-Lingual Sequence Tagging from Scratch</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangSC16">arxiv 1603.06270</a>.
-</li>
-<li>Lidong Bing, Mingyang Ling, Richard C. Wang, William W. Cohen (2016): <a href="postscript/aaai-2016.pdf">Distant IE by Bootstrapping Using Lists and Document Structure</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/BingLWC16">AAAI-2016</a>.
-</li>
-<li>Bhavana Dalvi and Aditya Mishra and William W. Cohen (2016): <a href="postscript/wsdm-2016.pdf">Hierarchical Semi-supervised Classification with Incomplete Class Hierarchies</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/wsdm/DalviMC16">WSDM-2016</a>.
 </li>
 </ol>
 <h3>Selected other papers</h3>
