--- a/pubs.html
+++ b/pubs.html
@@ -2,6 +2,19 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Papers by William W. Cohen</h3>
+<h3>2019</h3>
+<ol>
+<li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
+</li>
+<li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">preparation</a>.
+</li>
+<li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in <a href="recent.html">preparation</a>.
+</li>
+</ol>
 <h3>2018</h3>
 <ol>
 <li>Haitian Sun, William W. Cohen, Lidong Bing (2018): <a href="http://arxiv.org/abs/1804.09238">Semi-Supervised Learning with Declaratively Specified Entropy Constraints</a> in <a href="recent.html">NIPS-2018</a>.
