--- a/pubs-s.html
+++ b/pubs-s.html
@@ -2,6 +2,11 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Selected and/or recent papers by William W. Cohen</h3>
+<h3>Recent papers: 2020</h3>
+<ol>
+<li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
+</li>
+</ol>
 <h3>Recent papers: 2019</h3>
 <ol>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
@@ -28,43 +33,6 @@
 <li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
 <li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
-</li>
-</ol>
-<h3>Recent papers: 2017</h3>
-<ol>
-<li>T. Mitchell, W. Cohen, E. Hruschka, P. Talukdar, B. Yang, J. Betteridge, A. Carlson, B. Dalvi, M. Gardner, B. Kisiel, J. Krishnamurthy, N. La, K. Mazaitis, T. Mohamed, N. Nakashole, E. Platanios, A. Ritter, M. Samadi, B. Settles, R. Wang, D. Wijaya, A. Gupta, X. Chen, A. Saparov,M. Greaves, J. Welling (2017): <a href="postscript/cacm-2017.pdf">Never-Ending Learning   </a> in <a href="recent.html">CACM</a>.
-</li>
-<li>Fan Yang, Jiazhong Nie, William W. Cohen, Ni Lao (2017): <a href="http://arxiv.org/abs/1711.06744">Learning to Organize Knowledge with N-Gram Machines</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-06744">arxiv.org/abs/1711.06744</a>.
-</li>
-<li>Zhilin Yang, Zihang Dai, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1711.03953">Breaking the Softmax Bottleneck: A High-Rank RNN Language Model</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-03953">arxiv.org 1711.03953</a>.
-</li>
-<li>Fan Yang, Zhilin Yang, William W. Cohen (2017): <a href="postscript/nips-2017-diffrule.pdf">Differentiable Learning of Logical Rules for Knowledge Base Reasoning</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYC17">NIPS-2017</a>.
-</li>
-<li>Zihang Dai, Zhilin Yang, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="postscript/nips-2017-badgan.pdf">Good Semi-supervised Learning that Requires a Bad GAN</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DaiYYCS17">NIPS-2017</a>.
-</li>
-<li>William W. Cohen and Fan Yang (2017): <a href="http://arxiv.org/abs/1707.05390">TensorLog: Deep Learning Meets Probabilistic Databases</a> in <a href="recent.html">arxiv.org 1707.05390</a>.
-</li>
-<li>Rose Catherine, Kathryn Mazaitis, Maxine Eskenazi, William W. Cohen (2017): <a href="http://arxiv.org/abs/1707.05254">Explainable Entity-based Recommendations with Knowledge Graphs (poster paper)</a> in <a href="recent.html">RecSys-2017</a>.
-</li>
-<li>Bhuwan Dhingra, Kathryn Mazaitis, William W. Cohen (2017): <a href="http://arxiv.org/abs/1707.03904">Quasar: Datasets for Question Answering by Search and Reading</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraMC17">arxiv 1707.03904</a>.
-</li>
-<li>Bhuwan Dhingra, Zhilin Yang, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1703.02620">Linguistic Knowledge as Memory for Recurrent Neural Networks</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraYCS17">arxiv 1703.02620</a>.
-</li>
-<li>Bhuwan Dhingra, Hanxiao Liu, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1703.00993">A Comparative Study of Word Embeddings for Reading Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraLSC17">arxiv 1703.00993</a>.
-</li>
-<li>Rose Catherine, William W. Cohen (2017): <a href="http://arxiv.org/abs/1704.02298">TransNets: Learning to Transform for Recommendation</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/CatherineC17">RecSys-2017</a>.
-</li>
-<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2017): <a href="http://arxiv.org/abs/1703.01557">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/BingCD17">IJCAI 2017</a>.
-</li>
-<li>Bhuwan Dhingra, Hanxiao Liu, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1606.01549">Gated-Attention Readers for Text Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/acl/DhingraLYCS17">ACL-2017</a>.
-</li>
-<li>Zhilin Yang, Junjie Hu, Ruslan Salakhutdinov, William W. Cohen (2017): <a href="http://arxiv.org/abs/1702.02206">Semi-Supervised QA with Generative Domain-Adaptive Nets</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangHSC17">ACL-2017</a>.
-</li>
-<li>Zhilin Yang, Bhuwan Dhingra, Ye Yuan, Junjie Hu, William W. Cohen, Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1611.01724">Words or Characters? Fine-grained Gating for Reading Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangDYHCS16">ICLR 2017</a>.
-</li>
-<li>Zhilin Yang, Ruslan Salakhutdinov, William W. Cohen  (2017): <a href="http://arxiv.org/abs/1703.06345">Transfer Learning for Sequence Tagging with Hierarchical Recurrent Networks</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangSC17">ICLR 2017</a>.
-</li>
-<li>Lidong Bing, Bhuwan Dhingra, Kathryn Mazaitis, Jong Hyuk Park, William W. Cohen (2017): <a href="http://arxiv.org/abs/1606.03398">Bootstrapping Distantly Supervised IE using Joint Learning and Small Well-structured Corpora</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/aaai/BingDMPC17">AAAI 2017</a>.
 </li>
 </ol>
 <h3>Selected other papers</h3>
