--- a/pubs.html
+++ b/pubs.html
@@ -2,6 +2,11 @@
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body><h3>Papers by William W. Cohen</h3>
+<h3>2020</h3>
+<ol>
+<li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
+</li>
+</ol>
 <h3>2019</h3>
 <ol>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
