--- a/pubs-a.html
+++ b/pubs-a.html
@@ -3,6 +3,8 @@
 </head>
 <body><h3>William W. Cohen's Papers: Applications</h3>
 <ol>
+<li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
+</li>
 <li>Qiao Jin, Bhuwan Dhingra, William W. Cohen, Xinghua Lu (2019): <a href="http://arxiv.org/abs/1904.02181">Probing Biomedical Embeddings from Language Models</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
