--- a/pubs-s.html
+++ b/pubs-s.html
@@ -37,6 +37,26 @@
 </ol>
 <h3>Selected other papers</h3>
 <ol>
+<li>T. Mitchell, W. Cohen, E. Hruschka, P. Talukdar, B. Yang, J. Betteridge, A. Carlson, B. Dalvi, M. Gardner, B. Kisiel, J. Krishnamurthy, N. La, K. Mazaitis, T. Mohamed, N. Nakashole, E. Platanios, A. Ritter, M. Samadi, B. Settles, R. Wang, D. Wijaya, A. Gupta, X. Chen, A. Saparov,M. Greaves, J. Welling (2017): <a href="postscript/cacm-2017.pdf">Never-Ending Learning   </a> in <a href="recent.html">CACM</a>.
+</li>
+<li>Zhilin Yang, Zihang Dai, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1711.03953">Breaking the Softmax Bottleneck: A High-Rank RNN Language Model</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-03953">arxiv.org 1711.03953</a>.
+</li>
+<li>Fan Yang, Zhilin Yang, William W. Cohen (2017): <a href="postscript/nips-2017-diffrule.pdf">Differentiable Learning of Logical Rules for Knowledge Base Reasoning</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYC17">NIPS-2017</a>.
+</li>
+<li>William W. Cohen and Fan Yang (2017): <a href="http://arxiv.org/abs/1707.05390">TensorLog: Deep Learning Meets Probabilistic Databases</a> in <a href="recent.html">arxiv.org 1707.05390</a>.
+</li>
+<li>Bhuwan Dhingra, Zhilin Yang, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1703.02620">Linguistic Knowledge as Memory for Recurrent Neural Networks</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraYCS17">arxiv 1703.02620</a>.
+</li>
+<li>Rose Catherine, William W. Cohen (2017): <a href="http://arxiv.org/abs/1704.02298">TransNets: Learning to Transform for Recommendation</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/CatherineC17">RecSys-2017</a>.
+</li>
+<li>Bhuwan Dhingra, Hanxiao Liu, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1606.01549">Gated-Attention Readers for Text Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/acl/DhingraLYCS17">ACL-2017</a>.
+</li>
+<li>Rose Catherine and William W. Cohen (2016): <a href="postscript/recsys-2016.pdf">Personalized Recommendations using Knowledge Graphs: A Probabilistic Logic Programming Approach</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/recsys/CatherineC16">RecSys 2016</a>.
+</li>
+<li>Zhilin Yang, Ruslan Salakhutdinov, William Cohen (2016): <a href="http://arxiv.org/abs/1603.08861">Revisiting Semi-Supervised Learning with Graph Embeddings</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangCS16">ICML-2016</a>.
+</li>
+<li>Jay Pujara, Hui Miao, Lise Getoor, and William W. Cohen  (2015): <a href="postscript/ai-mag-2015.pdf">Using semantics and statistics to turn data into knowledge</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/aim/PujaraMGC15">AI Magazine 2015</a>.
+</li>
 <li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2015): <a href="postscript/acl-2015-yww.pdf">Joint Information Extraction and Reasoning: A Scalable Statistical Relational Learning Approach</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/acl/WangC15">ACL-2015</a>.
 </li>
 <li>Dana Movshovitz-Attias and William W. Cohen  (2015): <a href="postscript/acl-2015-dana.pdf">KB-LDA: Jointly Learning a Knowledge Base of Hierarchy, Relations, and Facts</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/acl/Movshovitz-Attias15">ACL-2015</a>.
