--- a/pubs.html
+++ b/pubs.html
@@ -9,6 +9,8 @@
 </ol>
 <h3>2019</h3>
 <ol>
+<li>Andrew O. Arnold, William W. Cohen (2019): <a href="postscript/https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">preparation</a>.
+</li>
 <li>Bhuwan Dhingra, Manaal Faruqui, Ankur Parikh, Ming-Wei Chang, Dipanjan Das, William W. Cohen (2019): <a href="http://arxiv.org/abs/1906.01081">Handling Divergent Reference Texts when Evaluating Table-to-Text Generation</a> in <a href="recent.html">ACL-2019</a>.
 </li>
 <li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
