--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <td>
 <h2 class="name">William W. Cohen</h2> 
 
-<h3 class="title">Director, Research Engineering, <a href="http://ai.google.com">Google AI</a></h3>
+<h3 class="title">Principal Scientist, <a href="http://ai.google.com">Google AI</a></h3>
 
-<b>News:</b> I have moved to Google! Starting June 2018 I will be
+<b>News:</b> I have moved to Google! Since June 2018 I have been
 starting up and leading a new research group in AI/ML that will be
 located in Pittsburgh in Google's Bakery Square location.
 
@@ -43,9 +43,9 @@ located in Pittsburgh in Google's Bakery Square location.
 
 <h3 class="sec"><a name="bio"></a>Biography</h3 class="sec">
 
-William Cohen is a Director of Research & Engineering at Google AI,
-and is based in Google's Pittsburgh office. He received his bachelor's
-degree in Computer Science from
+William Cohen is a Principal Scientist at Google, and is based in
+Google's Pittsburgh office. He received his bachelor's degree in
+Computer Science from
 <a href="http://www.duke.edu">Duke University</a> in 1984, and a PhD
 in Computer Science from <a href="http://www.rutgers.edu">Rutgers
 University</a> in 1990.  From 1990 to 2000 Dr. Cohen worked at
