--- a/pubs-n.html
+++ b/pubs-n.html
@@ -3,7 +3,7 @@
 </head>
 <body><h3>William W. Cohen's Papers: Deep Learning</h3>
 <ol>
-<li>Andrew O. Arnold, William W. Cohen (2019): <a href="postscript/https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">preparation</a>.
+<li>Andrew O. Arnold, William W. Cohen (2019): <a href="https://arxiv.org/abs/1911.06111">Instance-based Transfer Learning for Multilingual Deep Retrieval</a> in <a href="recent.html">preparation</a>.
 </li>
 <li>Yifeng Tao, Chunhui Cai, William W. Cohen, Xinghua Lu (2020): <a href="postscript/psb-2020.pdf">From genome to phenome: Predicting multiple cancer phenotypes based on somatic genomic alternations bia the genomic impact transformer</a> in <a href="recent.html">PSB-2020</a>.
 </li>
