--- a/pubs-g.html
+++ b/pubs-g.html
@@ -5,9 +5,9 @@
 <ol>
 <li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
 </li>
-<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">preparation</a>.
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>.
 </li>
-<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">preparation</a>.
+<li>Haitian Sun, Tania Bedrax-Weiss, William W. Cohen (2019): <a href="http://arxiv.org/abs/1904.09537">PullNet: Open Domain Question Answering with Iterative Retrieval on Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
 <li>Haitian Sun, William W. Cohen, Lidong Bing (2018): <a href="http://arxiv.org/abs/1804.09238">Semi-Supervised Learning with Declaratively Specified Entropy Constraints</a> in <a href="recent.html">NIPS-2018</a>.
 </li>
@@ -15,7 +15,7 @@
 </li>
 <li>Haitian Sun, Bhuwan Dhingra, Manzil Zaheer, Kathryn Mazaitis, Ruslan Salakhutdinov, and William W. Cohen (2018): <a href="http://arxiv.org/abs/1809.00782">Open Domain Question Answering Using Early Fusion of Knowledge Bases and Text</a> in <a href="recent.html">EMNLP-2018</a>.
 </li>
-<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="postscript/naacl-mage-2018.pdf">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
+<li>Bhuwan Dhingra, Qiao Jin, Zhilin Yang, William W. Cohen, Ruslan Salakhutdinov (2018): <a href="https://www.aclweb.org/anthology/N18-2007/">Neural Models for Reasoning over Multiple Mentions using Coreference</a> in <a href="recent.html">NAACL-2018</a>.
 </li>
 <li>Fan Yang, Zhilin Yang, William W. Cohen (2017): <a href="postscript/nips-2017-diffrule.pdf">Differentiable Learning of Logical Rules for Knowledge Base Reasoning</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYC17">NIPS-2017</a>.
 </li>
