--- a/pubs-i.html
+++ b/pubs-i.html
@@ -5,7 +5,7 @@
 <ol>
 <li>William W. Cohen, Haitian Sun, Alex Hofer, Matthew Siegler  (2019): <a href="http://arxiv.org/abs/1905.10417">Differentiable Representations For Multihop Inference Rules</a> in <a href="recent.html">preparation</a>.
 </li>
-<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">preparation</a>.
+<li>William W. Cohen, Matthew Siegler, Alex Hofer (2019): <a href="http://arxiv.org/abs/1905.06209">Neural Query Language: A Knowledge Base Query Language for Tensorflow</a> in <a href="recent.html">arxiv</a>.
 </li>
 <li>Fan Yang, Jiazhong Nie, William W. Cohen, Ni Lao (2017): <a href="http://arxiv.org/abs/1711.06744">Learning to Organize Knowledge with N-Gram Machines</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1711-06744">arxiv.org/abs/1711.06744</a>.
 </li>
