--- a/recent.html
+++ b/recent.html
@@ -1,37 +1,26 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>Bibliographic Details of Recent Publications</title>
+    <title>Bibliographic Details of Some Publications</title>
   </head>
 
   <body>
-    <h3>Bibliographic Details of Recent Publications</h3>
+    <h3>Bibliographic Details of Some Publications</h3>
 
     <p>
-      Mostly, I've linked to
+      This is mostly of historical interest, since it's generally easy
+      to find bibliographic citations of papers nowadays.  Some of the
+      papers below are linked to
       the <a href="http://www.informatik.uni-trier.de/~ley/db/index.html">DBLP</a>
-      entry for a publication.  Some papers, especially workshop
-      papers, non-DB and AI papers, and some of the more recent
-      publications, don't have entries in DBLP (yet), or else I
-      haven't got around to adding the pointer.  For these:
+      entry for a publication.  A small number of papers don't have
+      entries in DBLP and/or I thought might be hard to look up, so
+      here's information on those citations.
 
     <ul>
+      <li>BioASQ-2018 is <a href="http://bioasq.org/workshop2018">The 6th BioASQ Workshop</a>, held as part of the EMNLP 2018 conference.
       <li>CACM is <a href="https://cacm.acm.org/">Communications of the ACM</a>
       <li>ICLR-2017 is the <a href="http://www.iclr.cc/doku.php?id=ICLR2017:main&redirect=1">5th International Conference on Learning Representations</a>
       <li>ACL-2016 is the <a href="http://acl2016.org/">53rd Annual Meeting of the Association for Computational Linguistics</a>.
-      <li>IJCAI-2016 is
-      the <a href="http://ijcai-16.org/">25th International Joint Conference on Artificial Intelligence</a>.
-      <li>ICML-2015 is the <a href="http://icml.cc/2016/">The 33rd International Conference on Machine Learning</a>.
-
-      <li>WSDM-2016 is
-      the <a href="http://www.wsdm-conference.org/2016/">Ninth
-      ACM Conference and Web Search and Data Mining</a>.
-
-      <li>AAAI-2016 is
-      the <a href="http://www.aaai.org/Conferences/AAAI/aaai16.php">Thirtieth
-      American Association of Artificial Intelligence
-      Conference</a>.
-
       <li>EMNLP-2015 is the <a href="http://www.emnlp2015.org/">2015
       Conference on Empirical Methods for Natural Language
       Processing</a>.
